--- a/index.html
+++ b/index.html
@@ -17,25 +17,23 @@
             <div class="slider-wrapper" tabindex="0">
 
                 <div class="item">
-                    <img src="img/01.webp" alt="Spiderman" />
+                    <img :src="slides[slideActive].image" alt="Spiderman" />
                     <div class="text">
-                        <h3>Spiderman</h3>
-                        <p>
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et temporibus voluptatum suscipit
-                            tempore aliquid deleniti aut
-                            veniam inventore eligendi ex ad ullam, cumque provident totam omnis, magnam dolores dolorum
-                            corporis.
-                        </p>
+                        <h3>{{ slides[slideActive].title }}</h3>
+                        <p>{{ slides[slideActive].text }}</p>
                     </div>
                 </div>
 
                 <div class="thumbs">
-                    <div class="prev"></div>
-                    <div class="next"></div>
-                    <div class="thumb active">
-                        <img src="img/01.webp" alt="Svezia" />
+                    <div @click="prevImg()" class="prev"></div>
+                    <div @click="nextImg()" class="next"></div>
+                    <div v-for="(index, slide) in slides" 
+                    :class="(index == slideActive) ? 'active' : ''"
+                    @click="goToSlide(index)" 
+                    class="thumb active">
+                        <img :src="slides.image" alt="Svezia" />
                     </div>
-                    <div class="thumb">
+                    <!-- <div class="thumb">
                         <img src="img/02.webp" alt="Ratchet & Clank" />
                     </div>
                     <div class="thumb">
@@ -46,7 +44,7 @@
                     </div>
                     <div class="thumb">
                         <img src="img/05.webp" alt="Avengers" />
-                    </div>
+                    </div> -->
                 </div>
 
             </div>
